--- a/finance/templates/register.html
+++ b/finance/templates/register.html
@@ -26,7 +26,7 @@
             event.preventDefault();
 
             const formdata = new FormData(formEl);
-            const data = Object.FromEntries(formdata);
+            const data = Object.fromEntries(formdata);
 
             console.log(data);
 
