Fri, Apr 19, 2024, 2:06 PM +08:00

--- a/finance/templates/register.html
+++ b/finance/templates/register.html
@@ -38,8 +38,8 @@
             });
 
             let responset = await response.text();
-            let responseObj = JSON.parse(responset);
-            document.querySelector('#status').innerHTML = responseObj['status'];
+            //let responseObj = JSON.parse(responset);
+            document.querySelector('#status').innerHTML = responset;
         });
 
     </script>
