Fri, Apr 19, 2024, 2:56 PM +08:00

--- a/finance/templates/register.html
+++ b/finance/templates/register.html
@@ -31,14 +31,14 @@
             console.log(data);
 
             // fetch post
-            let response = await fetch('/register', {
+            let response = await fetch('/add', {
                 method: "POST",
                 headers: {"Content-Type" : "application/json"},
                 body: JSON.stringify(data)
             });
 
             let responset = await response.text();
-            //let responseObj = JSON.parse(responset);
+            let responseObj = JSON.parse(responset);
             document.querySelector('#status').innerHTML = responset;
         });
 
