--- a/finance/templates/register.html
+++ b/finance/templates/register.html
@@ -39,7 +39,7 @@
 
             let responset = await response.text();
             let responseObj = JSON.parse(responset);
-            document.querySelector('#status').innerHTML = responset;
+            document.querySelector('#status').innerHTML = responseObj['status'];
         });
 
     </script>
