--- a/finance/templates/register.html
+++ b/finance/templates/register.html
@@ -18,7 +18,10 @@
         </div>
         <button class="btn btn-primary" type="submit">Register</button>
     </form>
-    <p id="status"></p>
+    <div>
+        <p></p>
+        <p id="status"></p>
+    </div>
     <script>
 
         let formEl = document.querySelector('#form');
