Fri, Apr 19, 2024, 3:08 PM +08:00

--- a/finance/templates/register.html
+++ b/finance/templates/register.html
@@ -42,7 +42,10 @@
 
             let responset = await response.text();
             let responseObj = JSON.parse(responset);
-            document.querySelector('#status').innerHTML = responseObj['status'];
+            if (responseObj['status'] == 'redirect')
+                window.location.href = '/';
+            else
+                document.querySelector('#status').innerHTML = responseObj['status'];
         });
 
     </script>
