--- a/finance/templates/login.html
+++ b/finance/templates/login.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <form action="/login" method="post">
+    <form id="signupform">
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" name="username" placeholder="Username" type="text">
         </div>
@@ -14,4 +14,11 @@
         </div>
         <button class="btn btn-primary" type="submit">Log In</button>
     </form>
+
+    <script>
+        const formEl = documentSelector("#signupform");
+        const dataform = DataForm(formE1)
+
+    </script>
+
 {% endblock %}
