Fri, Apr 19, 2024, 3:45 PM +08:00

--- a/finance/templates/login.html
+++ b/finance/templates/login.html
@@ -20,6 +20,7 @@
     <script>
         let formEl = documentSelector("#loginform");
         formEl.addEventListener('submit', async function(event){
+            event.preventDefault();
 
             const formdata = new FormData(formE1);
             const data = Object.FromEntries(formdata);
