Fri, Apr 19, 2024, 3:47 PM +08:00

--- a/finance/templates/login.html
+++ b/finance/templates/login.html
@@ -18,7 +18,7 @@
     <p id="status"></p>
 
     <script>
-        let formEl = documentSelector("#loginform");
+        let formEl = document.querySelector("#loginform");
         formEl.addEventListener('submit', async function(event) {
             event.preventDefault();
 
