--- a/finance/templates/login.html
+++ b/finance/templates/login.html
@@ -22,8 +22,8 @@
         formEl.addEventListener('submit', async function(event) {
             event.preventDefault();
 
-            const formdata = new FormData(formE1);
-            const data = Object.FromEntries(formdata);
+            const formdata = new FormData(formEl);
+            const data = Object.fromEntries(formdata);
 
             let response = await fetch('/logincheck', {
                 method: "POST",
