Fri, Apr 19, 2024, 4:49 PM +08:00

--- a/finance/templates/register.html
+++ b/finance/templates/register.html
@@ -32,7 +32,7 @@
             const data = Object.fromEntries(formdata);
 
             // fetch post
-            let response = await fetch('/add', {
+            let response = await fetch('/register', {
                 method: "POST",
                 headers: {"Content-Type" : "application/json"},
                 body: JSON.stringify(data)
