Fri, Apr 19, 2024, 5:14 PM +08:00

--- a/finance/templates/quote.html
+++ b/finance/templates/quote.html
@@ -34,8 +34,11 @@
             let responset = await response.text();
             let responseObj = JSON.parse(responset);
 
-            html = '';
-            document.querySelector("#status").innerHTML = responseObj['status']
+
+            if ('status' in responseObj)
+                document.querySelector("#status").innerHTML = responseObj['status']
+            else
+                if ()
 
 //            for (let obj of responseObj){
 //                html += '
