Fri, Apr 19, 2024, 5:26 PM +08:00

--- a/finance/templates/quote.html
+++ b/finance/templates/quote.html
@@ -41,7 +41,7 @@
             else
                 if ('price' in responseObj)
                 {
-                    html = 'SYMBOL : ${responseObj["symbol"]}, PRICE : ${responseObj["price"]}';
+                    html = `SYMBOL : ${responseObj["symbol"]}, PRICE : ${responseObj["price"]}`;
 
                     document.querySelector("#result").innerHTML = html;
                 }
