--- a/finance/templates/quote.html
+++ b/finance/templates/quote.html
@@ -46,9 +46,10 @@
                 else
                     if ('price' in responseObj)
                     {
-                        html += `SYMBOL : ${responseObj["symbol"]}, PRICE : ${responseObj["price"]}<br>`;
+                        html = `SYMBOL : ${responseObj["symbol"]}, PRICE : ${responseObj["price"]}<br>` + html;
 
-                        document.querySelector("#status").innerHTML = html;
+                        document.querySelector("#status").innerHTML = '';
+                        document.querySelector("#result").innerHTML = html;
                     }
 
 //            for (let obj of responseObj){
