Fri, Apr 19, 2024, 10:19 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -30,9 +30,24 @@
             let responset = await response.text();
             let responseObj = JSON.parse(responset);
 
-            
+            if (responseObj == null)
+                document.querySelector("#status").innerHTML = 'Symbol not found';
+            else
+            {
+                if ('status' in responseObj)
+                    document.querySelector("#status").innerHTML = responseObj['status'];
 
-        })
+                if ('price' in responseObj)
+                {
+                    html = `SYMBOL : ${responseObj["symbol"]}, PRICE : ${responseObj["price"]}<br>` + html;
+
+                    document.querySelector("#status").innerHTML = '';
+                    document.querySelector("#result").innerHTML = html;
+                }
+            }
+        });
+
+        
 
 
 
