Fri, Apr 19, 2024, 10:22 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -4,7 +4,7 @@
     Buy
 {% endblock %}
 
-{% block body %}
+{% block main %}
 
     <form id="buyform">
         <div class="mb-3">
@@ -46,10 +46,6 @@
                 }
             }
         });
-
-        
-
-
 
 
     </script>
