Fri, Apr 19, 2024, 10:24 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -13,6 +13,13 @@
         <button class="btn btn-primary" type="submit">Select Stock</button>
     <form>
 
+
+    <p></p>
+    <p id="status"></p>
+
+    <p id="result"></p>
+
+
     <script>
         let formEl = document.querySelector('#buyform');
         formEl.addEventListener('submit', async function(event) {
