--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -11,8 +11,7 @@
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" name="symbol" placeholder="Symbol" type="text">
         </div>
         <button class="btn btn-primary" type="submit">Select Stock</button>
-    <form>
-
+    </form>
 
     <p></p>
     <p id="status"></p>
