Mon, Apr 22, 2024, 9:36 AM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -49,6 +49,7 @@
                 {
                     html = `SYMBOL : ${responseObj["symbol"]}, PRICE per unit : ${responseObj["price"]}
                             <table>
+                                <col />
                             <form id="buytransaction">
 
                                 <input autocomplete="off" autofocus placeholder="0" name="shares" type="text">
