--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -47,17 +47,22 @@
 
                 if ('price' in responseObj)
                 {
-                    html = `SYMBOL : ${responseObj["symbol"]}, PRICE per unit : ${responseObj["price"]}
-                            <table>
-                                <col />
-                            <form id="buytransaction">
-
-                                <input autocomplete="off" autofocus placeholder="0" name="shares" type="text">
-                                <input type="submit">Buy</submit>
-
-
-                            </form>
-                            <br> `
+                    html = `<table>
+                                <col style="width:20%" />
+                                <col style="width:20%" />
+                                <col style="width:40%" />
+                                <tr>
+                                    <td> SYMBOL : ${responseObj["symbol"]}</td>
+                                    <td> PRICE per unit :  $ ${responseObj["price"]}</td>
+                                    <td>
+                                        <form id="buytransaction">
+                                            <input autocomplete="off" autofocus placeholder="0" name="shares" type="text">
+                                            <input type="submit">Buy</submit>
+                                        </form>
+                                    </td>
+                                </tr>
+                            </table>
+                            `
                         ;
 
                     document.querySelector("#status").innerHTML = '';
