--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -57,7 +57,7 @@
                                     <td>
                                         <form id="buytransaction">
                                             <input autocomplete="off" autofocus placeholder="0" name="shares" type="text">
-                                            <input type="submit">Buy</submit>
+                                            <input type="submit">Buy
                                         </form>
                                     </td>
                                 </tr>
