Mon, Apr 22, 2024, 9:52 AM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -52,12 +52,12 @@
                                 <col style="width:20%" />
                                 <col style="width:40%" />
                                 <tr>
-                                    <td> SYMBOL : ${responseObj["symbol"]}</td>
+                                    <td> ${responseObj["symbol"]}</td>
                                     <td> PRICE per unit :  $ ${responseObj["price"]}</td>
                                     <td>
                                         <form id="buytransaction">
                                             <input autocomplete="off" autofocus placeholder="0" name="shares" type="text">
-                                            <input type="submit">Buy
+                                            <button type="submit">Buy</button>
                                         </form>
                                     </td>
                                 </tr>
