--- a/finance/static/styles.css
+++ b/finance/static/styles.css
@@ -22,7 +22,15 @@ nav .navbar-brand .green
     color: #2e944b;
 }
 
-#buytransaction {
-    text-align: center;
+table {
+    background-color: transparent;
+    margin-bottom: 1rem;
+    width: 100%;
+    }
 
+table th,
+table td {
+    padding: 0.75rem;
+    vertical-align: middle;
+    min-width: 100px;
 }
