Mon, Apr 22, 2024, 9:54 AM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -57,7 +57,7 @@
                                     <td>
                                         <form id="buytransaction">
                                             <input autocomplete="off" autofocus placeholder="0" name="shares" type="text">
-                                            <button type="submit">Buy</button>
+                                            <button class="btn btn-primary" type="submit">Buy</button>
                                         </form>
                                     </td>
                                 </tr>
