Mon, Apr 22, 2024, 9:59 AM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -63,10 +63,9 @@
                                         </form>
                                     </td>
                                 </tr>
-                            </table>
-                            `
-                        ;
+                            </table>`;
 
+                    
                     document.querySelector("#status").innerHTML = '';
                     document.querySelector("#result").innerHTML = html;
                 }
