Mon, Apr 22, 2024, 1:20 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -72,7 +72,7 @@
                     document.addEventListener('DOMContentLoaded', () => {
                         autoEl.addEventListener('input', () => {
                             let totalprice = ${responseObj["price"]}*autoEl.value;
-                            document.querySelector("#buytotal").innerHTML = totalprice
+                            document.querySelector("#buytotal").innerHTML = totalprice;
                         });
                     });
 
