Mon, Apr 22, 2024, 1:24 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -60,7 +60,7 @@
                                     <td>
                                         <form id="buytransaction">
                                             <input id="buyauto" autocomplete="off" autofocus placeholder="0" name="shares" type="text">
-                                            <input type="hidden" name="symbol" value="${responseObj["symbol"]}>
+                                            <input type="hidden" name="symbol" value="${responseObj['symbol']}">
                                             <button class="btn btn-primary" type="submit">Buy</button>
                                         </form>
                                     </td>
