Mon, Apr 22, 2024, 1:26 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -69,9 +69,10 @@
                             </table>`;
 
                     let autoEl = document.querySelector("#buyauto");
-                    document.addEventListener('DOMContentLoaded', () => {
-                        autoEl.addEventListener('input', () => {
+                    document.addEventListener('DOMContentLoaded', function() {
+                        autoEl.addEventListener('input', function() {
                             let totalprice = responseObj["price"]*autoEl.value;
+                            console.log(totalprice);
                             document.querySelector("#buytotal").innerHTML = totalprice;
                         });
                     });
