--- a/finance/templates/layout.html
+++ b/finance/templates/layout.html
@@ -37,7 +37,7 @@
                             <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
-                            <li class="nav-item"><em >$10000 balance</em></li>
+                            <li class="nav-item"><em id="accountbalance"></em></li>
                             <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
                         </ul>
                     {% else %}
@@ -59,6 +59,13 @@
         {% endif %}
 
         <main class="container py-5 text-center">
+            <script>
+                
+
+
+            </script>
+
+
             {% block main %}{% endblock %}
         </main>
 
