Mon, Apr 22, 2024, 2:03 PM +08:00

--- a/finance/templates/layout.html
+++ b/finance/templates/layout.html
@@ -59,7 +59,10 @@
         {% endif %}
 
         <main class="container py-5 text-center">
+            <script>
+                
 
+            </script>
             {% block main %}{% endblock %}
         </main>
 
