--- a/finance/templates/layout.html
+++ b/finance/templates/layout.html
@@ -60,7 +60,9 @@
 
         <main class="container py-5 text-center">
             <script>
-                
+                let response = await fetch('/checkbalance');
+                let responset = await response.text();
+                let responseObj 
 
             </script>
             {% block main %}{% endblock %}
