Mon, Apr 22, 2024, 2:16 PM +08:00

--- a/finance/templates/layout.html
+++ b/finance/templates/layout.html
@@ -62,7 +62,8 @@
             <script>
                 let response = await fetch('/checkbalance');
                 let responset = await response.text();
-                let responseObj 
+                let responseObj = JSON.parse(responset);
+                document.querySelector("accountbalance")
 
             </script>
             {% block main %}{% endblock %}
