Mon, Apr 22, 2024, 2:23 PM +08:00

--- a/finance/templates/layout.html
+++ b/finance/templates/layout.html
@@ -16,6 +16,8 @@
 
         <link href="/static/styles.css" rel="stylesheet">
 
+        <script src="/static/scripts.js"></script>
+
         <title>C$50 Finance: {% block title %}{% endblock %}</title>
 
     </head>
