--- a/finance/templates/layout.html
+++ b/finance/templates/layout.html
@@ -62,7 +62,10 @@
 
         <main class="container py-5 text-center">
             <script>
-                updateMainBalance();
+                document.addEventListener('DOMContentLoaded', () => {
+                     response = updateMainBalance();
+                     document.querySelector("#accountbalance").innerHTML = response['balance'];
+                });
 
             </script>
             {% block main %}{% endblock %}
