Mon, Apr 22, 2024, 2:41 PM +08:00

--- a/finance/templates/layout.html
+++ b/finance/templates/layout.html
@@ -62,9 +62,9 @@
 
         <main class="container py-5 text-center">
             <script>
-                document.addEventListener('DOMContentLoaded', () => {
+                document.addEventListener('DOMContentLoaded', function() {
                      response = updateMainBalance();
-                     document.querySelector("#accountbalance").innerHTML = response['balance'];
+                     document.querySelector("#accountbalance").innerHTML = response;
                 });
 
             </script>
