Mon, Apr 22, 2024, 3:05 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -73,7 +73,7 @@
                     let autoEl = document.querySelector("#buyauto");
                     autoEl.addEventListener('input', function() {
                         let totalbalance = returnBalance();
-                        let n = autoEL.value;
+                        let n = autoEl.value;
                         let price = responseObj["price"];
                         console.log(price);
                         console.log(n);
