Mon, Apr 22, 2024, 3:11 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -71,8 +71,8 @@
                     document.querySelector("#result").innerHTML = html;
 
                     let autoEl = document.querySelector("#buyauto");
-                    autoEl.addEventListener('input', function() {
-                        let totalbalance = returnBalance();
+                    autoEl.addEventListener('input', async function() {
+                        let totalbalance = await returnBalance();
                         let n = autoEl.value;
                         let price = responseObj["price"];
                         console.log(price);
