Mon, Apr 22, 2024, 3:17 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -75,10 +75,8 @@
                         let totalbalance = await returnBalance();
                         let n = autoEl.value;
                         let price = responseObj["price"];
-                        console.log(price);
-                        console.log(n);
-                        console.log(totalbalance);
 
+                        buyTotalDisplay (price, n, totalbalance);
 //                        document.querySelector("#buytotal").innerHTML = "Total Price : $" + totalprice.toFixed(2);
 
 
