Mon, Apr 22, 2024, 3:25 PM +08:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -73,7 +73,10 @@
                     let autoEl = document.querySelector("#buyauto");
                     autoEl.addEventListener('input', async function() {
                         let totalbalance = await returnBalance();
-                        
+
+                        // regex check
+                        let pattern = /[0-9]/;
+
                         let n = autoEl.value;
                         let price = responseObj["price"];
 
